--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -7,10 +7,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: echo a string
-        run: echo "hello world"
+        run: echo "hello world test"
       - name: multiline script
         run: |
           node -v
           npm -v
-          
-      
+      - name: python command
+        run: 
+          import platform
+          print (platform.processor())
+        shell: python
+
