--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -1,4 +1,4 @@
-name: shell commands
+name: shell-commands
 
 on: [push]
 
@@ -20,6 +20,7 @@ jobs:
         shell: python
   run-windows-commands:
     runs-on: windows-latest
+    needs: ['shell-commands']
     steps:
       - name: Directory Powershell
         run: Get-Location
