--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -20,7 +20,7 @@ jobs:
         shell: python
   run-windows-commands:
     runs-on: windows-latest
-    needs: ['shell-commands']
+    needs: ["shell-commands"]
     steps:
       - name: Directory Powershell
         run: Get-Location
